src/test/deca/context/invalid/declMethod-sameParamVar.context
declMethod-sameParamVar.deca:5: